Revision history for Perl extension Asterisk::AMI.
0.1.9
	- Fixed a bug when the cli command 'database show' was used with a small asterisk database (single entry) that would cause the response
	to no be parsed correctly, causing it to never complete.

	- Fixing some of our OO implementation to make it more correct and to properly isolate seperate 
	instances of our object from each other

	- Optimized the regex and method used for splitting 'Action: Command' output

	- Cleaned up some logic in a few subroutines

	- Fixed some more typos in the documentation

0.1.8
	- Added support for 'MD5' challenge authenticaiton

	- Added SSL support

	- Internal changes to how we keep track of active actions

	- Fixed some bad grammar/spelling/typos in documentation,
	most likely added a few more as well

0.1.7

	- Removed Asterisk::AMI::completed(). Seemed pointless with callbacks.

	- Added TCP_Keepalive option, enables socket level TCP keepalive for detecting dead connections.

	- Fixed possible undefined value for timeout when sending a keepalive.

	- We were being a bit overzealous when we encounted an error on the socket (during connect or otherwise).
	We now callback any outstanding actions (as if they had timed out) before we issue the on_error callbacks
	and do internal cleanup. This bug was causing the a hang during login if a socket connection could not
	be made.

	- Fixed a bug with older version of ExtUtils::MakeMaker

	- Fix to properly us \v when perl >=5.10, we were only doing it when perl >5.10. This only affects performance.

	- 'Keepalive' was not being set if Blocking was set to 1. Now 'Keepalive' is always set if configured,
	it just may not be helpful if you are not running an event loop.

	- Updated Dependancy to AnyEvent version 5.0 or greater

	- Switch to AE interface for AnyEvent for timers and condvars. Lowers overhead when using alot of timers.

	- Some general code cleanups

0.1.6 
	- Fixes calling wrong modules (leftover from name change)
